--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       justify-content: center;
       height: var(--header-height);
       text-align: center;
-      padding: 5rem 0 2rem; /* Increased top padding */
+      padding: 3rem 0 2rem;
       border-bottom: 1px solid var(--secondary-color);
     }
 
@@ -158,24 +158,45 @@
       font-style: italic;
     }
 
+    /* Profile Photo */
+    .profile-photo {
+      display: block;
+      width: min(350px, 80vw);
+      max-width: 100%;
+      height: auto;
+      margin: 0.75rem auto;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s ease;
+      vertical-align: middle;
+    }
+
+    .profile-photo:hover {
+      transform: scale(1.05);
+    }
+
     /* Social Links */
     .social-links {
       text-align: center;
       display: flex;
       justify-content: center;
       gap: 0.75rem;
-      margin-top: 1rem;
+      margin-top: 0.75rem;
     }
 
     .social-links a {
-      color: var(--primary-color);
-      text-decoration: none;
-      font-weight: 500;
-      transition: color 0.3s ease;
+      display: inline-block;
+      padding: 0.4rem 0.8rem;
+      background-color: var(--primary-color);
+      color: white;
+      font-weight: 600;
+      border-radius: 4px;
+      transition: all 0.3s ease;
     }
 
     .social-links a:hover {
-      color: var(--secondary-color);
+      background-color: var(--secondary-color);
+      transform: translateY(-2px);
     }
 
     /* Responsive Styles */
