--- a/index.html
+++ b/index.html
@@ -293,9 +293,9 @@
       <p>As a teaching assistant for undergraduate and graduate courses, I focus on causal inference methods, particularly advanced difference-in-differences (DiD) techniques. This experience has enhanced both my teaching abilities and technical expertise in causal methods.</p>
       <p>Email: <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a></p>
       <div class="social-links">
-      <a href="https://scholar.google.com/your-profile" target="_blank">Google Scholar</a>
-      <a href="https://www.linkedin.com/in/your-profile" target="_blank">LinkedIn</a>
-      <a href="https://twitter.com/your-handle" target="_blank">Twitter</a>
+      <a href="https://scholar.google.com/citations?user=LGHCqEMAAAAJ&hl=en&oi=ao" target="_blank">Google Scholar</a>
+      <a href="https://www.linkedin.com/in/vikrant-vilas-kamble-20779a134/" target="_blank">LinkedIn</a>
+      <a href="https://x.com/home" target="_blank">Twitter</a>
       </div>
     </section>
 
