--- a/index.html
+++ b/index.html
@@ -239,6 +239,16 @@
         padding: 0.5rem;
       }
     }
+
+    .social-links a {
+    text-decoration: underline;
+    color: black;
+    margin-right: 20px;
+}
+
+.social-links a:hover {
+    color: #555;
+}
   </style>
 
 
@@ -288,15 +298,15 @@
     <!-- Home Section -->
     <section id="home" class="section">
       <img src="pic_new.jpg" alt="Profile photo of Vikrant Kamble" class="profile-photo">
-      <p>Welcome! My name is Vikrant.</p>
-      <p>I am a 4th-year PhD candidate in Economics at the University of Delaware, specializing in Labor, Health, and Policy Evaluation across the USA and India. My research employs econometric techniques to understand policy impacts on communities, including studies on labor market behavior, career education outcomes, and Medicaid expansion effects on crime. My work has been published in Social Science Research. I use STATA, R, and Python for analysis.</p>
+      <p>Welcome to my website! My name is Vikrant.</p>
+      <p>I am a 4th-year Economics PhD candidate at the University of Delaware. I work on labor and health topics. I also do Policy Evaluation across the USA and India. My research employs econometric techniques to understand policy impacts on communities, including studies on labor market behavior, career education outcomes, and Medicaid expansion effects on crime. My work has been published in Social Science Research. </p>
       <p>As a teaching assistant for undergraduate and graduate courses, I focus on causal inference methods, particularly advanced difference-in-differences (DiD) techniques. This experience has enhanced both my teaching abilities and technical expertise in causal methods.</p>
-      <p>Email: <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a></p>
-      <div class="social-links">
-      <a href="https://scholar.google.com/citations?user=LGHCqEMAAAAJ&hl=en&oi=ao" target="_blank">Google Scholar</a>
-      <a href="https://www.linkedin.com/in/vikrant-vilas-kamble-20779a134/" target="_blank">LinkedIn</a>
-      <a href="https://x.com/home" target="_blank">Twitter</a>
-      </div>
+
+    <div class="social-links">
+        <a href="https://scholar.google.com/citations?user=LGHCqEMAAAAJ&hl=en&oi=ao" target="_blank">Google Scholar</a>
+        <a href="https://www.linkedin.com/in/vikrant-vilas-kamble-20779a134/" target="_blank">LinkedIn</a>
+        <a href="https://x.com/home" target="_blank">Twitter</a>
+    </div>
     </section>
 
     
@@ -310,19 +320,19 @@
       <h3>Research in Progress</h3>
       <ul>
         <li>
-          Intertemporal Elasticity of Labor Supply for Taxicab drivers: Evidence using a new instrument (USA) (co-authored with
+          Intertemporal Elasticity of Labor Supply for Taxicab drivers: Evidence using a new instrument (co-authored with
           <a href="https://swapnil-motghare.github.io/" target="_blank">Swapnil Motghare</a>)
         </li>
         <li>
-          Labor Market Consequences of Cycling Program using DiD (on India) 
+          Labor Market Consequences of Cycling Program using DiD
         </li>
         <li>
-          Causal Effects of CTE Pathways and Career Clusters on Secondary and Postsecondary Outcomes (USA) (co-authored with 
+          Causal Effects of CTE Pathways and Career Clusters on Secondary and Postsecondary Outcomes (co-authored with 
           <a href="https://scholar.google.com/citations?user=x1gyyigAAAAJ&hl=en" target="_blank"> Dr. Kenneth Shores</a> and
           <a href="https://www.education.udel.edu/grad-student/jesse-eze/" target="_blank"> Jesse Eze</a>)
         </li>
         <li>
-          Effect of Medicaid Expansion on Crime in Big Cities (USA) (co-authored with 
+          Effect of Medicaid Expansion on Crime in Big Cities (co-authored with 
           <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Usman Taj</a>)
         </li>
       </ul>
@@ -365,7 +375,7 @@
 
 <!-- Resources Section -->
     <section id="resources" class="section">
-      <h2>Resources</h2>
+      <h2>Resources for Students</h2>
       <h3>Stata Resources</h3>
       <ul>
         <li><a href="https://www.sscc.wisc.edu/statistics/stata/" target="_blank">University of Wisconsin - Madison</a></li>
