--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
 
 
 
+<!-- *********************************************************** -->
 
 
 
@@ -271,8 +272,7 @@
 
 
 
-
-
+<!-- ********** INTENTIONAL EXTRA SPACE ************** -->
 
 
 
@@ -343,7 +343,7 @@
           <a href="https://www.education.udel.edu/grad-student/jesse-eze/" target="_blank"> Jesse Eze</a>)
         </li>
         <li>
-          Effect of Medicaid Expansion on Crime in Big Cities (co-authored with 
+          Medicaid Expansion, Ride-sharing and Crime: Evidence from US Cities (co-authored with 
           <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Usman Taj</a>)
         </li>
       </ul>
