--- a/index.html
+++ b/index.html
@@ -159,17 +159,17 @@
     }
 
     /* Profile Photo */
-    .profile-photo {
-      display: block;
-      width: min(350px, 80vw);
-      max-width: 100%;
-      height: auto;
-      margin: 0.75rem auto;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      transition: transform 0.3s ease;
-      vertical-align: middle;
-    }
+.profile-photo {
+    display: block;
+    width: min(500px, 80vw);  /* Changed from 350px to 500px */
+    max-width: 100%;
+    height: auto;
+    margin: 0.75rem auto;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+    vertical-align: middle;
+}
 
     .profile-photo:hover {
       transform: scale(1.05);
