--- a/index.html
+++ b/index.html
@@ -258,6 +258,25 @@
 .social-links a:hover {
     text-decoration: underline;
 }
+
+
+ .header-contact {
+    margin-top: 10px;
+}
+
+.header-cv {
+    margin-top: 5px;
+}
+
+.header-cv a {
+    text-decoration: none;
+}
+
+.header-cv a:hover {
+    text-decoration: underline;
+}   
+
+    
   </style>
 
 
@@ -285,11 +304,14 @@
 </head>
 <body>
   <!-- Header Container -->
-  <header class="header-container">
+<header class="header-container">
     <h1 class="header-name">Vikrant V. Kamble</h1>
     <p class="header-role">Economics PhD Candidate</p>
-    <p class="header-email">Email: <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a></p>
-  </header>
+    <div class="header-contact">
+        <p class="header-email">Email: <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a></p>
+        <p class="header-cv">CV: <a href="CV_Vikrant_Kamble.pdf" target="_blank">Download CV</a></p>
+    </div>
+</header>
 
 
   <nav class="navbar">
