--- a/index.html
+++ b/index.html
@@ -307,10 +307,11 @@
 <header class="header-container">
     <h1 class="header-name">Vikrant V. Kamble</h1>
     <p class="header-role">Economics PhD Candidate</p>
-    <div class="header-contact">
-        <p class="header-email">Email: <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a></p>
-        <p class="header-cv">CV: <a href="CV_Vikrant_Kamble.pdf" target="_blank">Download CV</a></p>
-    </div>
+    <p class="header-email">
+        Email: <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a>
+        &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+        CV: <a href="CV_Vikrant_Kamble.pdf" target="_blank">Download CV</a>
+    </p>
 </header>
 
 
