--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       text-align: center;
       padding: 3rem 0 2rem;
       border-bottom: 1px solid var(--secondary-color);
+      margin-top: 50px;  /* This adds space above the header */
     }
 
     .header-name {
@@ -161,7 +162,7 @@
     /* Profile Photo */
 .profile-photo {
     display: block;
-    width: min(500px, 80vw);  /* Changed from 350px to 500px */
+    width: min(450px, 80vw);  /* Changed from 350px to 450px */
     max-width: 100%;
     height: auto;
     margin: 0.75rem auto;
