--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
     text-decoration: none;
 }
 
-.header-cv a:hover {
+.header- a:hover {
     text-decoration: underline;
 }   
 
@@ -309,9 +309,9 @@
     <h1 class="header-name">Vikrant V. Kamble</h1>
     <p class="header-role">Economics PhD Candidate</p>
     <p class="header-email">
-        Email: <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a>
+        <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a>
         &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
-        CV: <a href="CV_Vikrant_Kamble.pdf" target="_blank">Download CV</a>
+        <a href="CV_Vikrant_Kamble.pdf" target="_blank">Download CV</a>
     </p>
 </header>
 
