--- a/index.html
+++ b/index.html
@@ -424,6 +424,7 @@
       </ul>
       <h3>Data Resources</h3>
       <ul>
+        <li><a href="https://osf.io/zyaqn/" target="_blank">Crime Open Database (CODE)</a></li>
         <li><a href="https://www.cdc.gov/nchs/nhis/index.htm" target="_blank">National Health Interview Survey (NHIS)</a></li>
         <li><a href="https://www.cdc.gov/brfss/index.html" target="_blank">Behavioral Risk Factor Surveillance System (BRFSS)</a></li>
         <li><a href="https://fred.stlouisfed.org/" target="_blank">Federal Reserve Economic Data (FRED)</a></li>
