--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
     <p class="header-email">
         <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a>
         &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
-        <a href="CV_Vikrant_Kamble.pdf" target="_blank">Download CV</a>
+        <a href="CV_Vikrant_Kamble.pdf" target="_blank">CV</a>
     </p>
 </header>
 
