--- a/index.html
+++ b/index.html
@@ -109,22 +109,23 @@
       padding: clamp(0.75rem, 2vw, 1.5rem);
       max-width: 1000px;
     }
-
-    /* Home section with side-by-side layout */
+    
+    /* Home page layout with picture on left and content on right */
     .home-container {
       display: flex;
       flex-direction: row;
       align-items: flex-start;
+      justify-content: space-between;
       gap: 2rem;
-      margin-bottom: 2rem;
+      margin: 2rem 0;
     }
 
     .profile-container {
       flex: 0 0 auto;
-      max-width: 40%;
+      max-width: 450px;
     }
 
-    .bio-container {
+    .home-content {
       flex: 1 1 auto;
     }
 
@@ -180,8 +181,8 @@
     /* Profile Photo */
     .profile-photo {
       display: block;
-      width: 100%;
-      max-width: 450px;
+      width: min(450px, 100%);
+      max-width: 100%;
       height: auto;
       margin: 0 auto;
       border-radius: 10px;
@@ -196,22 +197,20 @@
 
     /* Social Links */
     .social-links {
-      text-align: center;
       display: flex;
-      justify-content: center;
-      gap: 0.75rem;
-      margin-top: 0.75rem;
+      gap: 20px;  /* Space between links */
     }
 
     .social-links a {
       background: transparent;
-      color: #000000;
+      color: #000000;  /* Black text */
       text-decoration: none;
       padding: 8px 16px;
       border-radius: 6px;
       font-weight: 500;
     }
 
+    /* Optional: add a subtle hover effect */
     .social-links a:hover {
       text-decoration: underline;
     }
@@ -228,7 +227,7 @@
       text-decoration: none;
     }
 
-    .header- a:hover {
+    .header-cv a:hover {
       text-decoration: underline;
     }
 
@@ -252,7 +251,7 @@
         justify-content: center;
       }
       
-      /* Stack home layout on smaller screens */
+      /* Stack the home layout on smaller screens */
       .home-container {
         flex-direction: column;
         align-items: center;
