--- a/index.html
+++ b/index.html
@@ -331,21 +331,27 @@
 
   <!-- Content -->
   <div class="content">
-    <!-- Home Section -->
-    <section id="home" class="section">
+<!-- Home Section -->
+<section id="home" class="section">
+  <div class="home-container">
+    <div class="profile-container">
       <img src="pic_new.jpg" alt="Profile photo of Vikrant Kamble" class="profile-photo">
+    </div>
+    <div class="home-content">
       <p>Welcome to my website! </p>
       <p>My name is Vikrant. I am a 4th-year Economics PhD candidate at the University of Delaware. I work on labor and health topics. My research employs econometric techniques to understand policy impacts on communities, including studies on labor market behavior, career education outcomes, and Medicaid expansion effects on crime. </p> 
         
       <p>My work has been published in Social Science Research. </p>
       <p>As a teaching assistant for undergraduate and graduate courses, I focus on causal inference methods, particularly advanced difference-in-differences (DiD) techniques. This experience has enhanced both my teaching abilities and technical expertise in causal methods.</p>
 
-    <div class="social-links">
+      <div class="social-links">
         <a href="https://scholar.google.com/citations?user=LGHCqEMAAAAJ&hl=en&oi=ao" target="_blank">Google Scholar</a>
         <a href="https://www.linkedin.com/in/vikrant-vilas-kamble-20779a134/" target="_blank">LinkedIn</a>
         <a href="https://x.com/home" target="_blank">Twitter</a>
+      </div>
     </div>
-    </section>
+  </div>
+</section>
 
     
     <!-- Research Section -->
