--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 <section id="home" class="section">
   <div class="home-container">
     <div class="profile-container">
-      <img src="pic_new.jpg" alt="Profile photo of Vikrant Kamble" class="profile-photo">
+      <img src="vikrant_pic.jpg" alt="Profile photo of Vikrant Kamble" class="profile-photo">
     </div>
     <div class="home-content">
       <p>Welcome to my website! </p>
