--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
       <h2>Resources for Students</h2>
       <h3>Stata Resources</h3>
       <ul>
-        <li><a href="https://www.sscc.wisc.edu/statistics/stata/" target="_blank">University of Wisconsin - Madison</a></li>
+        <li><a href="https://www.ssc.wisc.edu/statistics/" target="_blank">University of Wisconsin - Madison</a></li>
         <li><a href="https://www.princeton.edu/~otorres/Stata/" target="_blank">Princeton University</a></li>
         <li><a href="https://stats.oarc.ucla.edu/stata/" target="_blank">UCLA Statistical Consulting Group</a></li>
         <li><a href="https://sociology.fas.harvard.edu/need-help-basic-stata" target="_blank">Harvard University IQSS</a></li>
