--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
         </li>
         <li>
           Medicaid Expansion, Ride-sharing and Crime: Evidence from US Cities (co-authored with 
-          <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Usman Taj</a>).  
+          <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Usman Taj</a>)  
           <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5115271" target="_blank">SSRN Link</a>
         </li>
       </ul>
