--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 <body>
   <!-- Header Container -->
 <header class="header-container">
-    <h1 class="header-name">Vikrant V. Kamble</h1>
+    <div class="header-name">VIKRANT V. KAMBLE</div>
     <p class="header-role">Economics PhD Candidate</p>
     <p class="header-email">
         <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a>
