--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
       
       <h3>Instructor</h3>
       <ul>
-        <li>ECON101: Introduction to Microeconomics</li>
+        <li>ECON101: Introduction to Microeconomics <a href="econ101_course_evaluations_winter2025.pdf" target="_blank">(Course evaluations)</a></li>
         <p class="indent">Winter 2025</p>
       </ul>
       
