--- a/index.html
+++ b/index.html
@@ -470,7 +470,6 @@
           <p>My name is Vikrant. I am a 4th-year Economics PhD candidate at the University of Delaware. I work on labor and health topics. My research employs econometric techniques to understand policy impacts on communities, including studies on labor market behavior, career education outcomes, and Medicaid expansion effects on crime.</p>
             
           <p>My work has been published in Social Science Research.</p>
-          <p>As a teaching assistant for undergraduate and graduate courses, I focus on causal inference methods, particularly advanced difference-in-differences (DiD) techniques. This experience has enhanced both my teaching abilities and technical expertise in causal methods.</p>
 
           <div class="social-links">
             <a href="https://scholar.google.com/citations?user=LGHCqEMAAAAJ&hl=en&oi=ao" target="_blank">Google Scholar</a>
@@ -483,12 +482,12 @@
       <!-- Interests and Education -->
       <div class="two-column">
         <div class="column">
-          <h2>Interests</h2>
+          <h2>Research Interests</h2>
           <ul class="interests-list">
             <li>Health Economics</li>
             <li>Labor Economics</li>
-            <li>Causal Inference Methods</li>
-            <li>Policy Evaluation</li>
+            <li>Development Economics</li>
+            <li>Environmental Economics</li>
           </ul>
         </div>
         <div class="column">
@@ -499,7 +498,7 @@
                 <path d="M12 3L1 9l11 6l11-6z" fill="currentColor"/>
                 <path d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82z" fill="currentColor"/>
               </svg>
-              PhD in Economics, 2025 (Expected)
+              PhD in Economics, 2021-
             </div>
             <div class="university">University of Delaware</div>
           </div>
@@ -509,9 +508,9 @@
                 <path d="M12 3L1 9l11 6l11-6z" fill="currentColor"/>
                 <path d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82z" fill="currentColor"/>
               </svg>
-              MA in Economics, 2022
+              MS in Economics, 2021
             </div>
-            <div class="university">University of Delaware</div>
+            <div class="university">University of Wisconsin-Madison</div>
           </div>
           <div class="education-item">
             <div class="degree">
@@ -519,9 +518,9 @@
                 <path d="M12 3L1 9l11 6l11-6z" fill="currentColor"/>
                 <path d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82z" fill="currentColor"/>
               </svg>
-              BS in Economics, 2019
+              B. Tech. in Electronics and Telecommunication Engineering, 2017
             </div>
-            <div class="university">Previous University</div>
+            <div class="university">Dr. BATU, India</div>
           </div>
         </div>
       </div>
@@ -536,7 +535,7 @@
         <div class="paper-title">"Noncustodial parents, instrumental networks, and child support compliance"</div>
         <div class="paper-author">with Quentin H. Riser, Daniel R. Meyer, and Lawrence M. Berger</div>
         <div class="paper-journal">Social Science Research, Volume 110, February 2023, 102850</div>
-        <a href="#" class="paper-link">View Paper</a>
+        <a href="#" class="https://www.sciencedirect.com/science/article/abs/pii/S0049089X23000054">View Paper</a>
       </div>
       
       <h3>Research in Progress</h3>
