--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
         <div class="paper-title">"Noncustodial parents, instrumental networks, and child support compliance"</div>
         <div class="paper-author">with Quentin H. Riser, Daniel R. Meyer, and Lawrence M. Berger</div>
         <div class="paper-journal">Social Science Research, Volume 110, February 2023, 102850</div>
-        <a href="#" class="https://www.sciencedirect.com/science/article/abs/pii/S0049089X23000054">View Paper</a>
+        <a href="https://www.sciencedirect.com/science/article/abs/pii/S0049089X23000054" class="paper-link" target="_blank">View Paper</a>
       </div>
       
       <h3>Research in Progress</h3>
