--- a/index.html
+++ b/index.html
@@ -597,25 +597,31 @@
 
     <!-- Resources Section -->
     <section id="resources" class="section">
-      <h2>Resources for Students</h2>
-      <h3>Stata Resources</h3>
-      <ul class="resources-list">
-        <li><a href="https://www.ssc.wisc.edu/statistics/" target="_blank">University of Wisconsin - Madison</a></li>
-        <li><a href="https://www.princeton.edu/~otorres/Stata/" target="_blank">Princeton University</a></li>
-        <li><a href="https://stats.oarc.ucla.edu/stata/" target="_blank">UCLA Statistical Consulting Group</a></li>
-        <li><a href="https://sociology.fas.harvard.edu/need-help-basic-stata" target="_blank">Harvard University IQSS</a></li>
-      </ul>
-      <h3>LaTeX Resources</h3>
-      <ul class="resources-list">
-        <li><a href="https://www.overleaf.com/latex/templates" target="_blank">Overleaf Templates</a></li>
-      </ul>
-      <h3>Data Resources</h3>
-      <ul class="resources-list">
-        <li><a href="https://osf.io/zyaqn/" target="_blank">Crime Open Database (CODE)</a></li>
-        <li><a href="https://www.cdc.gov/nchs/nhis/index.htm" target="_blank">National Health Interview Survey (NHIS)</a></li>
-        <li><a href="https://www.cdc.gov/brfss/index.html" target="_blank">Behavioral Risk Factor Surveillance System (BRFSS)</a></li>
-        <li><a href="https://fred.stlouisfed.org/" target="_blank">Federal Reserve Economic Data (FRED)</a></li>
-      </ul>
+        <h2>Resources for Students</h2>
+        <div class="resources-container">
+            <div class="column">
+                <h3>Stata Resources</h3>
+                <ul class="resources-list">
+                    <li><a href="https://www.ssc.wisc.edu/statistics/" target="_blank">University of Wisconsin - Madison</a></li>
+                    <li><a href="https://www.princeton.edu/~otorres/Stata/" target="_blank">Princeton University</a></li>
+                    <li><a href="https://stats.oarc.ucla.edu/stata/" target="_blank">UCLA Statistical Consulting Group</a></li>
+                    <li><a href="https://sociology.fas.harvard.edu/need-help-basic-stata" target="_blank">Harvard University IQSS</a></li>
+                </ul>
+                <h3>LaTeX Resources</h3>
+                <ul class="resources-list">
+                    <li><a href="https://www.overleaf.com/latex/templates" target="_blank">Overleaf Templates</a></li>
+                </ul>
+            </div>
+            <div class="column">
+                <h3>Data Resources</h3>
+                <ul class="resources-list">
+                    <li><a href="https://osf.io/zyaqn/" target="_blank">Crime Open Database (CODE)</a></li>
+                    <li><a href="https://www.cdc.gov/nchs/nhis/index.htm" target="_blank">National Health Interview Survey (NHIS)</a></li>
+                    <li><a href="https://www.cdc.gov/brfss/index.html" target="_blank">Behavioral Risk Factor Surveillance System (BRFSS)</a></li>
+                    <li><a href="https://fred.stlouisfed.org/" target="_blank">Federal Reserve Economic Data (FRED)</a></li>
+                </ul>
+            </div>
+        </div>
     </section>
   </div>
 
