--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
         <span class="arrow">▶</span> Abstract
       </div>
       <div class="abstract-content">
-        This paper examines the intertemporal elasticity of labor supply for taxicab drivers using a novel instrumental variable approach. We find that drivers exhibit forward-looking behavior in response to wage changes and likely prevented labor force exits.
+        This paper examines the intertemporal elasticity of labor supply for taxicab drivers using a novel instrument. We find the positive intertemporal elasticity of labor supply for taxicab drivers.
       </div>
     </li>
     <li>
@@ -593,7 +593,7 @@
         <span class="arrow">▶</span> Abstract
       </div>
       <div class="abstract-content">
-        This study investigates the causal impact of urban cycling infrastructure programs on labor market outcomes using a difference-in-differences approach. Preliminary results suggest significant improvements in employment accessibility and commuting efficiency.
+        This study investigates the long term causal effect of cycling program on labor market outcomes using a DDD approach. Preliminary results suggest significant improvements in labor market outcomes.
       </div>
     </li>
     <li>
@@ -604,7 +604,7 @@
         <span class="arrow">▶</span> Abstract
       </div>
       <div class="abstract-content">
-        This research evaluates how different career and technical education (CTE) pathways affect student outcomes across secondary and postsecondary levels. Using administrative data, we examine heterogeneous effects across different career clusters and student demographics.
+        This research evaluates how different career and technical education (CTE) pathways affect student outcomes across secondary and postsecondary levels. Using Delaware administrative data, we examine heterogeneous effects across different career clusters.
       </div>
     </li>
     <li>
@@ -615,9 +615,7 @@
         <span class="arrow">▶</span> Abstract
       </div>
       <div class="abstract-content">
-        This paper explores the interaction between Medicaid expansion, the growth of ride-sharing services, and crime rates in U.S. cities. We find that the combination of expanded healthcare access and improved transportation options contributes to significant reductions in certain types of crime.
-      </div>
-    </li>
+Crime rates in the U.S. have fallen over the past two decades, though periods like the pandemic saw sharp increases. This paper examines how the 2014 Medicaid expansion and ride-sharing services have influenced crime in major cities, using daily data from the 21 largest U.S. cities. We provide the first causal analysis linking these policies to urban crime trends.    </li>
   </ul>
 </section>
 
