--- a/index.html
+++ b/index.html
@@ -679,6 +679,13 @@ Crime rates in the U.S. have fallen over the past two decades, though periods li
         <li><a href="https://www.cdc.gov/brfss/index.html" target="_blank">Behavioral Risk Factor Surveillance System (BRFSS)</a></li>
         <li><a href="https://fred.stlouisfed.org/" target="_blank">Federal Reserve Economic Data (FRED)</a></li>
       </ul>
+      <h3>Causality Resources</h3>
+      <ul class="resources-list">
+        <li><a href="https://asjadnaqvi.github.io/DiD/" target="_blank">Staggered DiD software packages: Asjad Naqvi </a></li>
+        <li><a href="https://neilhe.com/stata-packages" target="_blank">Synthetic Control Method Stata packages</a></li>
+        <li><a href="https://jenniferdoleac.com/resources/" target="_blank">Resources: Jennifer Doleac </a></li>
+        <li><a href="https://sebastiantellotrillo.com/resources" target="_blank">Resources: Sebastian Tello Trillo</a></li>
+      </ul>
     </div>
   </div>
 </section>
