--- a/index.html
+++ b/index.html
@@ -681,6 +681,7 @@ Crime rates in the U.S. have fallen over the past two decades, though periods li
       </ul>
       <h3>Additional Resources</h3>
       <ul class="resources-list">
+        <li><a href="https://www.youtube.com/playlist?list=PLXs0Z86ZOIlHc8ApDD1v_wFi1GNChN284" target="_blank">Diff-in-Diff course: Clement De Chaisemartin</a></li>
         <li><a href="https://asjadnaqvi.github.io/DiD/" target="_blank">Staggered DiD software packages: Asjad Naqvi </a></li>
         <li><a href="https://neilhe.com/stata-packages" target="_blank">Synthetic Control Method Stata packages: Jialun (Neil) He</a></li>
         <li><a href="https://jenniferdoleac.com/resources/" target="_blank">Resources: Jennifer Doleac </a></li>
