--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@ Crime rates in the U.S. have fallen over the past two decades, though periods li
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Vikrant V. Kamble | Last updated: May 9, 2025</p>
+    <p>&copy; 2025 Vikrant V. Kamble | Last updated: May, 2025</p>
   </footer>
 
 <!-- Combined JavaScript for section navigation and abstract toggles -->
