--- a/index.html
+++ b/index.html
@@ -820,7 +820,7 @@ Crime rates in the U.S. have fallen over the past two decades, though periods li
         </div>
         <div class="resource-card" data-tags="economics resources">
           <h4>Resources: Sebastian Tello Trillo</h4>
-          <p>Economics resources focused on health economics.</p>
+          <p>Economics resources -- Almost all.</p>
           <a href="https://sebastiantellotrillo.com/resources" target="_blank" class="resource-link">View Resource</a>
         </div>
         <div class="resource-card" data-tags="coding resources undergraduate">
