--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
     <section id="home" class="section active">
       <div class="home-container">
         <div class="profile-container">
-          <img src="vikrant1.png" alt="Profile photo of Vikrant Kamble" class="profile-photo">
+          <img src="vikrant1.png" alt="Profile photo of Vikrant Kamble" class="profile-photo" width="200" height="300">
         </div>
         <div class="home-content">
           <p>Welcome to my website!</p>
