--- a/index.html
+++ b/index.html
@@ -537,6 +537,8 @@
             
           <p>My work has been published in Social Science Research.</p>
 
+          <p>Outside of my studies, I love cooking tasty meals and singing with passion.</p>
+
           <div class="social-links">
             <a href="https://scholar.google.com/citations?user=LGHCqEMAAAAJ&hl=en&oi=ao" target="_blank">Google Scholar</a>
             <a href="https://www.linkedin.com/in/vikrant-vilas-kamble-20779a134/" target="_blank">LinkedIn</a>
