--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
             
           <p>My work has been published in Social Science Research.</p>
 
-          <p>Outside of my studies, I love cooking tasty meals and singing with passion.</p>
+          <p>Outside of my studies, I love cooking tasty meals, singing with passion, and taking long refreshing walks.</p>
 
           <div class="social-links">
             <a href="https://scholar.google.com/citations?user=LGHCqEMAAAAJ&hl=en&oi=ao" target="_blank">Google Scholar</a>
