--- a/index.html
+++ b/index.html
@@ -728,9 +728,9 @@ Crime rates in the U.S. have fallen over the past two decades, though periods li
           <a href="https://stats.oarc.ucla.edu/stata/" target="_blank" class="resource-link">View Resource</a>
         </div>
         <div class="resource-card" data-tags="stata basics introduction">
-          <h4>Harvard University IQSS</h4>
-          <p>Introduction to basic Stata commands and operations.</p>
-          <a href="https://sociology.fas.harvard.edu/need-help-basic-stata" target="_blank" class="resource-link">View Resource</a>
+          <h4>Customize Graph Styles in STATA</h4>
+          <p>Introduction to different scheme of the graph in Stata.</p>
+          <a href="https://nariyoo.com/stata-how-to-customize-graph-styles-like-ggplot-in-r/" target="_blank" class="resource-link">View Resource</a>
         </div>
       </div>
     </div>
