--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@ Crime rates in the U.S. have fallen over the past two decades, though periods li
         </div>
         <div class="resource-card" data-tags="stata basics introduction">
           <h4>Customize Graph Styles in STATA</h4>
-          <p>Introduction to different scheme of the graph in Stata.</p>
+          <p>Introduction to the different graph schemes in Stata.</p>
           <a href="https://nariyoo.com/stata-how-to-customize-graph-styles-like-ggplot-in-r/" target="_blank" class="resource-link">View Resource</a>
         </div>
       </div>
