--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vikrant V. Kamble - Economics PhD Candidate</title>
+  <title>Vikrant V. Kamble</title>
   
   <!-- Favicon Links -->
   <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
@@ -506,15 +506,16 @@
 </head>
 <body>
   <!-- Header Container -->
-  <header class="header-container">
-    <div class="header-name">VIKRANT V. KAMBLE</div>
-    <p class="header-role">Economics PhD Candidate</p>
-    <p class="header-email">
-      <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a>
-      &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
-      <a href="CV_Vikrant_Kamble.pdf" target="_blank">CV</a>
-    </p>
-  </header>
+<header class="header-container">
+  <div class="header-name">VIKRANT V. KAMBLE</div>
+  <p class="header-info">
+    Economics PhD Candidate &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+    <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a>
+    &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+    <a href="CV_Vikrant_Kamble.pdf" target="_blank">CV</a>
+  </p>
+</header>
+
 
   <nav class="navbar">
     <a data-section="home" class="nav-link active">Home</a>
