--- a/index.html
+++ b/index.html
@@ -527,10 +527,10 @@
   <!-- Content -->
   <div class="content">
     <!-- Home Section -->
-  <section id="home" class="section active">
-  <div class="home-container">
+<section id="home" class="section active">
+  <div class="home-container" style="display: flex; align-items: flex-start; gap: 20px;">
     <div class="profile-container">
-      <img src="vikrant1.png" alt="Profile photo of Vikrant Kamble" class="profile-photo" width="50" height="100">
+      <img src="vikrant1.png" alt="Profile photo of Vikrant Kamble" class="profile-photo" style="width: 150px; height: auto; float: left; margin-right: 20px;">
     </div>
     <div class="home-content">
       <p>Welcome to my website!</p>
@@ -541,48 +541,25 @@
       <p>Outside of my studies, I love cooking tasty meals, singing with passion, and taking long refreshing walks.</p>
 
       <div class="social-links">
-        <a href="https://scholar.google.com/citations?user=LGHCqEMAAAAJ&hl=en&oi=ao" target="_blank">Google Scholar</a>
-        <a href="https://www.linkedin.com/in/vikrant-vilas-kamble-20779a134/" target="_blank">LinkedIn</a>
+        <a href="https://scholar.google.com/citations?user=LGHCqEMAAAAJ&hl=en&oi=ao" target="_blank">Google Scholar</a> |
+        <a href="https://www.linkedin.com/in/vikrant-vilas-kamble-20779a134/" target="_blank">LinkedIn</a> |
         <a href="https://x.com/home" target="_blank">Twitter</a>
       </div>
-    </div>
-  </div>
 
-  <!-- Interests and Education -->
-  <div class="two-column">
-    <div class="column">
       <h2>Research Interests</h2>
-      <ul class="interests-list">
+      <ul>
         <li>Health Economics</li>
         <li>Labor Economics</li>
         <li>Development Economics</li>
       </ul>
-    </div>
-    <div class="column">
+
       <h2>Education</h2>
-      <div class="education-item">
-        <div class="degree">
-          <svg class="degree-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-            <path d="M12 3L1 9l11 6l11-6z" fill="currentColor"/>
-            <path d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82z" fill="currentColor"/>
-          </svg>
-          PhD in Economics, 2021–
-        </div>
-        <div class="university">University of Delaware</div>
-      </div>
-      <div class="education-item">
-        <div class="degree">
-          <svg class="degree-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-            <path d="M12 3L1 9l11 6l11-6z" fill="currentColor"/>
-            <path d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82z" fill="currentColor"/>
-          </svg>
-          MS in Economics, 2021
-        </div>
-        <div class="university">University of Wisconsin-Madison</div>
-      </div>
+      <p><strong>PhD in Economics</strong>, 2021–<br>University of Delaware</p>
+      <p><strong>MS in Economics</strong>, 2021<br>University of Wisconsin–Madison</p>
     </div>
   </div>
 </section>
+
 
     <!-- Research Section -->
     <section id="research" class="section">
