--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
 <section id="home" class="section active">
   <div class="home-container" style="display: flex; align-items: flex-start; gap: 20px;">
     <div class="profile-container">
-      <img src="vikrant1.png" alt="Profile photo of Vikrant Kamble" class="profile-photo" style="width: 250px; height: auto; float: left; margin-right: 10px;">
+      <img src="vikrant1.png" alt="Profile photo of Vikrant Kamble" class="profile-photo" style="width: 400px; height: auto; float: left; margin-right: 10px;">
     </div>
     <div class="home-content">
       <p>Welcome to my website!</p>
@@ -541,8 +541,8 @@
       <p>Outside of my studies, I love cooking tasty meals, singing with passion, and taking long refreshing walks.</p>
 
       <div class="social-links">
-        <a href="https://scholar.google.com/citations?user=LGHCqEMAAAAJ&hl=en&oi=ao" target="_blank">Google Scholar</a> |
-        <a href="https://www.linkedin.com/in/vikrant-vilas-kamble-20779a134/" target="_blank">LinkedIn</a> |
+        <a href="https://scholar.google.com/citations?user=LGHCqEMAAAAJ&hl=en&oi=ao" target="_blank">Google Scholar</a> 
+        <a href="https://www.linkedin.com/in/vikrant-vilas-kamble-20779a134/" target="_blank">LinkedIn</a> 
         <a href="https://x.com/home" target="_blank">Twitter</a>
       </div>
 
