--- a/index.html
+++ b/index.html
@@ -529,9 +529,16 @@
     <!-- Home Section -->
 <section id="home" class="section active">
   <div class="home-container" style="display: flex; align-items: flex-start; gap: 20px;">
-    <div class="profile-container">
-      <img src="vikrant1.png" alt="Profile photo of Vikrant Kamble" class="profile-photo" style="width: 400px; height: auto; float: left; margin-right: 10px;">
+    <div class="profile-container" style="text-align: center;">
+      <img src="vikrant1.png" alt="Profile photo of Vikrant Kamble" class="profile-photo" style="width: 400px; height: auto; display: block; margin: 0 auto;">
+      
+      <div class="social-links" style="margin-top: 10px;">
+        <a href="https://scholar.google.com/citations?user=LGHCqEMAAAAJ&hl=en&oi=ao" target="_blank">Google Scholar</a> |
+        <a href="https://www.linkedin.com/in/vikrant-vilas-kamble-20779a134/" target="_blank">LinkedIn</a> |
+        <a href="https://x.com/home" target="_blank">Twitter</a>
+      </div>
     </div>
+
     <div class="home-content">
       <p>Welcome to my website!</p>
       <p>My name is Vikrant. I am a 4th-year Economics PhD candidate at the University of Delaware. I work on labor and health topics. My research employs econometric techniques to understand policy impacts on communities, including studies on labor market behavior, career education outcomes, and Medicaid expansion effects on crime.</p>
@@ -539,12 +546,6 @@
       <p>My work has been published in <em>Social Science Research</em>.</p>
 
       <p>Outside of my studies, I love cooking tasty meals, singing with passion, and taking long refreshing walks.</p>
-
-      <div class="social-links">
-        <a href="https://scholar.google.com/citations?user=LGHCqEMAAAAJ&hl=en&oi=ao" target="_blank">Google Scholar</a> 
-        <a href="https://www.linkedin.com/in/vikrant-vilas-kamble-20779a134/" target="_blank">LinkedIn</a> 
-        <a href="https://x.com/home" target="_blank">Twitter</a>
-      </div>
 
       <h2>Research Interests</h2>
       <ul>
@@ -559,6 +560,7 @@
     </div>
   </div>
 </section>
+
 
 
     <!-- Research Section -->
