--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-  
+
+  <head>
+  <!-- Font Awesome CDN -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+</head>
+
   <style>
     :root {
       --primary-color: #2F3E56;
@@ -529,14 +534,24 @@
     <!-- Home Section -->
 <section id="home" class="section active">
   <div class="home-container" style="display: flex; align-items: flex-start; gap: 20px;">
+    
     <div class="profile-container" style="text-align: center;">
       <img src="vikrant1.png" alt="Profile photo of Vikrant Kamble" class="profile-photo" style="width: 400px; height: auto; display: block; margin: 0 auto;">
       
       <div class="social-links" style="margin-top: 10px;">
-        <a href="https://scholar.google.com/citations?user=LGHCqEMAAAAJ&hl=en&oi=ao" target="_blank">Google Scholar</a> |
-        <a href="https://www.linkedin.com/in/vikrant-vilas-kamble-20779a134/" target="_blank">LinkedIn</a> |
-        <a href="https://x.com/home" target="_blank">Twitter</a>
+        <a href="https://scholar.google.com/citations?user=LGHCqEMAAAAJ&hl=en&oi=ao" target="_blank" style="margin: 0 10px;">
+          <i class="fas fa-graduation-cap fa-lg"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/vikrant-vilas-kamble-20779a134/" target="_blank" style="margin: 0 10px;">
+          <i class="fab fa-linkedin fa-lg"></i>
+        </a>
+        <a href="https://x.com/home" target="_blank" style="margin: 0 10px;">
+          <i class="fab fa-twitter fa-lg"></i>
+        </a>
       </div>
+      <h2>Education</h2>
+      <p><strong>PhD in Economics</strong>, 2021–<br>University of Delaware</p>
+      <p><strong>MS in Economics</strong>, 2021<br>University of Wisconsin–Madison</p>
     </div>
 
     <div class="home-content">
@@ -553,10 +568,6 @@
         <li>Labor Economics</li>
         <li>Development Economics</li>
       </ul>
-
-      <h2>Education</h2>
-      <p><strong>PhD in Economics</strong>, 2021–<br>University of Delaware</p>
-      <p><strong>MS in Economics</strong>, 2021<br>University of Wisconsin–Madison</p>
     </div>
   </div>
 </section>
