--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
   <div class="home-container" style="display: flex; align-items: flex-start; gap: 20px;">
     
     <div class="profile-container" style="text-align: center;">
-      <img src="vikrant1.png" alt="Profile photo of Vikrant Kamble" class="profile-photo" style="width: 400px; height: auto; display: block; margin: 0 auto;">
+      <img src="vikrant1.png" alt="Profile photo of Vikrant Kamble" class="profile-photo" style="width: 350px; height: auto; display: block; margin: 0 auto;">
       
       <div class="social-links" style="margin-top: 10px;">
         <a href="https://scholar.google.com/citations?user=LGHCqEMAAAAJ&hl=en&oi=ao" target="_blank" style="margin: 0 10px;">
@@ -549,9 +549,6 @@
           <i class="fab fa-twitter fa-lg"></i>
         </a>
       </div>
-      <h2>Education</h2>
-      <p><strong>PhD in Economics</strong>, 2021–<br>University of Delaware</p>
-      <p><strong>MS in Economics</strong>, 2021<br>University of Wisconsin–Madison</p>
     </div>
 
     <div class="home-content">
@@ -562,12 +559,15 @@
 
       <p>Outside of my studies, I love cooking tasty meals, singing with passion, and taking long refreshing walks.</p>
 
-      <h2>Research Interests</h2>
+      <p>Research Interests</p>
       <ul>
         <li>Health Economics</li>
         <li>Labor Economics</li>
         <li>Development Economics</li>
       </ul>
+      <p>Education</p>
+      <p><strong>PhD in Economics</strong>, 2021–<br>University of Delaware</p>
+      <p><strong>MS in Economics</strong>, 2021<br>University of Wisconsin–Madison</p>
     </div>
   </div>
 </section>
