--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
 <body>
   <!-- Header Container -->
 <header class="header-container">
-  <div class="header-name">VIKRANT V. KAMBLE</div>
+  <div class="header-name">Vikrant V. Kamble</div>
   <p class="header-info">
     Economics PhD Candidate &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
     <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a>
@@ -551,24 +551,26 @@
       </div>
     </div>
 
-    <div class="home-content">
-      <p>Welcome to my website!</p>
-      <p>My name is Vikrant. I am a 4th-year Economics PhD candidate at the University of Delaware. I work on labor and health topics. My research employs econometric techniques to understand policy impacts on communities, including studies on labor market behavior, career education outcomes, and Medicaid expansion effects on crime.</p>
-        
-      <p>My work has been published in <em>Social Science Research</em>.</p>
-
-      <p>Outside of my studies, I love cooking tasty meals, singing with passion, and taking long refreshing walks.</p>
-
-      <p>Research Interests</p>
-      <ul>
-        <li>Health Economics</li>
-        <li>Labor Economics</li>
-        <li>Development Economics</li>
-      </ul>
-      <p>Education</p>
-      <p><strong>PhD in Economics</strong>, 2021–<br>University of Delaware</p>
-      <p><strong>MS in Economics</strong>, 2021<br>University of Wisconsin–Madison</p>
-    </div>
+<div class="home-content">
+  <p>Welcome to my website!</p>
+  <p>My name is Vikrant. I am a 4th-year Economics PhD candidate at the University of Delaware. I work on labor and health topics. My research employs econometric techniques to understand policy impacts on communities, including studies on labor market behavior, career education outcomes, and Medicaid expansion effects on crime.</p>
+    
+  <p>My work has been published in <em>Social Science Research</em>.</p>
+  <p>Outside of my studies, I love cooking tasty meals, singing with passion, and taking long refreshing walks.</p>
+  
+  <b><u>Research Interests:</u></b>
+  <ul>
+    <li>Health Economics</li>
+    <li>Labor Economics</li>
+    <li>Development Economics</li>
+  </ul>
+  
+  <b><u>Education:</u></b>
+  <ul>
+    <li><strong>PhD in Economics</strong>, 2021–<br>University of Delaware</li>
+    <li><strong>MS in Economics</strong>, 2021<br>University of Wisconsin–Madison</li>
+  </ul>
+</div>
   </div>
 </section>
 
