--- a/index.html
+++ b/index.html
@@ -532,25 +532,6 @@
   <!-- Content -->
   <div class="content">
     <!-- Home Section -->
-<section id="home" class="section active">
-  <div class="home-container" style="display: flex; align-items: flex-start; gap: 20px;">
-    
-    <div class="profile-container" style="text-align: center;">
-      <img src="vikrant1.png" alt="Profile photo of Vikrant Kamble" class="profile-photo" style="width: 350px; height: auto; display: block; margin: 0 auto;">
-      
-      <div class="social-links" style="margin-top: 10px;">
-        <a href="https://scholar.google.com/citations?user=LGHCqEMAAAAJ&hl=en&oi=ao" target="_blank" style="margin: 0 10px;">
-          <i class="fas fa-graduation-cap fa-lg"></i>
-        </a>
-        <a href="https://www.linkedin.com/in/vikrant-vilas-kamble-20779a134/" target="_blank" style="margin: 0 10px;">
-          <i class="fab fa-linkedin fa-lg"></i>
-        </a>
-        <a href="https://x.com/home" target="_blank" style="margin: 0 10px;">
-          <i class="fab fa-twitter fa-lg"></i>
-        </a>
-      </div>
-    </div>
-
 <div class="home-content">
   <p>Welcome to my website!</p>
   <p>My name is Vikrant. I am a 4th-year Economics PhD candidate at the University of Delaware. I work on labor and health topics. My research employs econometric techniques to understand policy impacts on communities, including studies on labor market behavior, career education outcomes, and Medicaid expansion effects on crime.</p>
@@ -558,21 +539,13 @@
   <p>My work has been published in <em>Social Science Research</em>.</p>
   <p>Outside of my studies, I love cooking tasty meals, singing with passion, and taking long refreshing walks.</p>
   
-  <b><u>Research Interests:</u></b>
-  <ul>
-    <li>Health Economics</li>
-    <li>Labor Economics</li>
-    <li>Development Economics</li>
-  </ul>
+  <p><b><u>Research Interests:</u></b> • Health Economics<br>
+  • Labor Economics<br>
+  • Development Economics</p>
   
-  <b><u>Education:</u></b>
-  <ul>
-    <li><strong>PhD in Economics</strong>, 2021–<br>University of Delaware</li>
-    <li><strong>MS in Economics</strong>, 2021<br>University of Wisconsin–Madison</li>
-  </ul>
+  <p><b><u>Education:</u></b> • <strong>PhD in Economics</strong>, 2021–<br>&nbsp;&nbsp;University of Delaware<br>
+  • <strong>MS in Economics</strong>, 2021<br>&nbsp;&nbsp;University of Wisconsin–Madison</p>
 </div>
-  </div>
-</section>
 
 
 
