--- a/index.html
+++ b/index.html
@@ -558,16 +558,17 @@
       <p>My work has been published in <em>Social Science Research</em>.</p>
       <p>Outside of my studies, I love cooking tasty meals, singing with passion, and taking long refreshing walks.</p>
       
-      <p><b><u>Research Interests:</u></b> • Health Economics<br>
+      <p><b><u>Research Interests:</u></b><br>
+      • Health Economics<br>
       • Labor Economics<br>
       • Development Economics</p>
       
-      <p><b><u>Education:</u></b> • <strong>PhD in Economics</strong>, 2021–<br>&nbsp;&nbsp;University of Delaware<br>
+      <p><b><u>Education:</u></b><br>
+      • <strong>PhD in Economics</strong>, 2021–<br>&nbsp;&nbsp;University of Delaware<br>
       • <strong>MS in Economics</strong>, 2021<br>&nbsp;&nbsp;University of Wisconsin–Madison</p>
     </div>
   </div>
 </section>
-
 
 
     <!-- Research Section -->
