--- a/index.html
+++ b/index.html
@@ -559,17 +559,18 @@
       <p>Outside of my studies, I love cooking tasty meals, singing with passion, and taking long refreshing walks.</p>
       
       <p><b><u>Research Interests:</u></b><br>
-      • Health Economics<br>
-      • Labor Economics<br>
-      • Development Economics</p>
+      &nbsp;&nbsp;&nbsp;&nbsp;• Health Economics<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;• Labor Economics<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;• Development Economics</p>
       
       <p><b><u>Education:</u></b><br>
-      • <strong>PhD in Economics</strong>, 2021–<br>&nbsp;&nbsp;University of Delaware<br>
-      • <strong>MS in Economics</strong>, 2021<br>&nbsp;&nbsp;University of Wisconsin–Madison</p>
+      &nbsp;&nbsp;&nbsp;&nbsp;• <strong>PhD in Economics</strong>, 2021–<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;University of Delaware<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;• <strong>MS in Economics</strong>, 2021<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;University of Wisconsin–Madison</p>
     </div>
   </div>
 </section>
-
 
     <!-- Research Section -->
     <section id="research" class="section">
