--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
 
     <div class="home-content">
       <p>Welcome to my website!</p>
-      <p>My name is Vikrant. I am a 4th-year Economics PhD candidate at the University of Delaware. I work on labor and health topics. My research employs econometric techniques to understand policy impacts on communities, including studies on labor market behavior, career education outcomes, and Medicaid expansion effects on crime.</p>
+      <p>My name is Vikrant. I am a 4th-year Economics PhD candidate at the University of Delaware. I work on labor and health topics. My research employs econometric causal methods to understand policy impacts on communities, including studies on labor market behavior, career education outcomes, and Medicaid expansion effects on crime.</p>
         
       <p>My work has been published in <em>Social Science Research</em>.</p>
       <p>Outside of my studies, I love cooking tasty meals, singing with passion, and taking long refreshing walks.</p>
